--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="it">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Annunci immobili in zona</title>
+  <title>Immobili in zona (gratis)</title>
 
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
   <style>
-    html, body { margin:0; padding:0; height:100%; font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial; }
+    html, body { height:100%; margin:0; font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial; }
     #top {
-      position: absolute; z-index: 10; left: 12px; right: 12px; top: 12px;
-      background: rgba(255,255,255,.95); border: 1px solid #eee; border-radius: 14px;
+      position: fixed; left: 12px; right: 12px; top: 12px; z-index: 999;
+      background: rgba(255,255,255,.95); border:1px solid #eee; border-radius: 14px;
       padding: 10px; display: grid; gap: 8px;
     }
     .row { display:flex; gap:8px; flex-wrap:wrap; }
@@ -17,22 +18,17 @@
     button { padding:10px 12px; border:1px solid #ddd; background:#fff; border-radius: 12px; cursor:pointer; }
     button.primary { background:#111; color:#fff; border-color:#111; }
     #status { color:#666; font-size:13px; }
-    #results {
-      max-height: 34vh; overflow:auto; border-top:1px solid #eee; padding-top:8px;
+    #links { display:grid; gap:8px; max-height: 34vh; overflow:auto; padding-top: 6px; }
+    .portal {
+      border:1px solid #eee; border-radius: 12px; padding:10px;
+      display:flex; justify-content:space-between; align-items:center; gap:10px;
     }
-    .res {
-      border:1px solid #eee; border-radius: 12px; padding:10px; margin-top:8px;
-    }
-    .res a { font-weight: 700; }
-    .tag { display:inline-block; padding: 3px 8px; border:1px solid #eee; border-radius: 999px; font-size: 12px; color:#444; margin-left:6px; }
-    #map { width:100%; height:100%; }
+    .portal strong { font-size:14px; }
+    .portal a { font-weight:700; }
+    .tag { font-size: 12px; color:#666; }
+    #map { height:100%; width:100%; }
   </style>
-
-  <script
-    src="https://maps.googleapis.com/maps/api/js?key=LA_TUA_MAPS_KEY&callback=initMap&libraries=places"
-    async defer></script>
 </head>
-
 <body>
   <div id="top">
     <div class="row">
@@ -41,152 +37,140 @@
     </div>
     <div class="row">
       <input id="address" placeholder="Inserisci città/indirizzo (es: Milano, Via Torino 10)" />
-      <button class="primary" id="btnSearch">Cerca annunci</button>
+      <button class="primary" id="btnBuild">Crea ricerche</button>
     </div>
     <div id="status">Pronto.</div>
-    <div id="results"></div>
+    <div id="links"></div>
   </div>
 
   <div id="map"></div>
 
+  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
   <script>
-    let map, marker;
     const statusEl = document.getElementById("status");
-    const resultsEl = document.getElementById("results");
-    const addressEl = document.getElementById("address");
+    const linksEl = document.getElementById("links");
     const strategyEl = document.getElementById("strategy");
+    const addressEl  = document.getElementById("address");
 
-    // 👉 metti qui l'URL del tuo Worker
-    const WORKER_SEARCH_ENDPOINT = "https://TUO-WORKER.example.workers.dev/api/search";
+    // Portali (gratis): aggiungi/togli domini qui
+    const PORTALS = [
+      { name: "Immobiliare.it", domain: "immobiliare.it" },
+      { name: "Idealista",      domain: "idealista.it" },
+      { name: "Casa.it",        domain: "casa.it" },
+      { name: "Wikicasa",       domain: "wikicasa.it" },
+      { name: "Subito (immobili)", domain: "subito.it" }
+    ];
+
+    // Mappa gratis (OpenStreetMap)
+    const map = L.map("map").setView([41.9028, 12.4964], 12); // fallback Roma
+    L.tileLayer("https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png", {
+      attribution: "&copy; OpenStreetMap contributors"
+    }).addTo(map);
+
+    let marker = null;
 
     function setStatus(msg){ statusEl.textContent = msg; }
-    function clearResults(){ resultsEl.innerHTML = ""; }
-
-    function initMap() {
-      map = new google.maps.Map(document.getElementById("map"), {
-        zoom: 14,
-        center: { lat: 41.9028, lng: 12.4964 },
-        disableDefaultUI: true
-      });
-
-      // Autocomplete indirizzi (Places)
-      const ac = new google.maps.places.Autocomplete(addressEl, { types: ["geocode"] });
-      ac.addListener("place_changed", () => {
-        const place = ac.getPlace();
-        if (!place.geometry) return;
-        setPoint(place.geometry.location.lat(), place.geometry.location.lng(), "Indirizzo selezionato");
-      });
-
-      document.getElementById("btnGeo").addEventListener("click", geoLocate);
-      document.getElementById("btnSearch").addEventListener("click", runSearch);
+    function setPoint(lat, lng, label){
+      map.setView([lat, lng], 14);
+      if (marker) map.removeLayer(marker);
+      marker = L.marker([lat, lng]).addTo(map).bindPopup(label || "Punto").openPopup();
     }
 
-    function setPoint(lat, lng, label) {
-      const pos = { lat, lng };
-      map.setCenter(pos);
-      if (marker) marker.setMap(null);
-      marker = new google.maps.Marker({ position: pos, map, title: label || "" });
+    async function geocodeNominatim(query){
+      // Geocoding gratis via Nominatim (OSM)
+      const url = new URL("https://nominatim.openstreetmap.org/search");
+      url.searchParams.set("q", query);
+      url.searchParams.set("format", "json");
+      url.searchParams.set("limit", "1");
+
+      const res = await fetch(url.toString(), { headers: { "Accept": "application/json" } });
+      if (!res.ok) throw new Error("Geocoding non disponibile");
+      const data = await res.json();
+      if (!data.length) return null;
+
+      return { lat: Number(data[0].lat), lng: Number(data[0].lon), label: data[0].display_name };
     }
 
-    function geoLocate() {
-      setStatus("Sto geolocalizzando…");
-      if (!navigator.geolocation) { setStatus("Geolocalizzazione non supportata."); return; }
-
-      navigator.geolocation.getCurrentPosition((pos) => {
-        setPoint(pos.coords.latitude, pos.coords.longitude, "Sei qui");
-        setStatus("Posizione rilevata. Ora puoi cercare annunci.");
-      }, (err) => {
-        setStatus("Permesso negato o errore posizione: " + err.message);
-      }, { enableHighAccuracy:true, timeout:15000, maximumAge:0 });
+    function googleUrlFor(domain, query){
+      // Cerca su Google limitando a un portale: site:dominio + query
+      const q = `site:${domain} ${query}`.trim();
+      const u = new URL("https://www.google.com/search");
+      u.searchParams.set("q", q);
+      return u.toString();
     }
 
-    async function geocodeAddress(text) {
-      // geocoding via Maps JS API
-      const geocoder = new google.maps.Geocoder();
-      return new Promise((resolve, reject) => {
-        geocoder.geocode({ address: text }, (results, status) => {
-          if (status === "OK" && results[0]) {
-            const loc = results[0].geometry.location;
-            resolve({ lat: loc.lat(), lng: loc.lng(), formatted: results[0].formatted_address });
-          } else {
-            reject(new Error("Indirizzo non trovato"));
-          }
-        });
-      });
+    function buildQuery(strategy, addressText){
+      // La tua “key strategy” + città/indirizzo
+      return [strategy, addressText].map(s => (s || "").trim()).filter(Boolean).join(" ");
     }
 
-    function buildQuery(strategy, addressText) {
-      // Esempio: "in vendita trilocale Milano Via Torino 10"
-      // puoi aggiungere keyword extra tipo "annuncio" o "immobiliare"
-      const parts = [strategy, addressText].map(s => (s || "").trim()).filter(Boolean);
-      return parts.join(" ");
+    function renderLinks(query){
+      linksEl.innerHTML = "";
+      for (const p of PORTALS) {
+        const link = googleUrlFor(p.domain, query);
+        const div = document.createElement("div");
+        div.className = "portal";
+        div.innerHTML = `
+          <div>
+            <strong>${p.name}</strong>
+            <div class="tag">site:${p.domain}</div>
+          </div>
+          <a href="${link}" target="_blank" rel="noopener">Apri</a>
+        `;
+        linksEl.appendChild(div);
+      }
     }
 
-    async function runSearch() {
-      clearResults();
-
+    async function buildSearches(){
+      linksEl.innerHTML = "";
       const strategy = strategyEl.value.trim();
       const addressText = addressEl.value.trim();
 
-      if (!strategy) { setStatus("Inserisci una keyword strategy (es: 'in vendita bilocale')."); return; }
-      if (!addressText) { setStatus("Inserisci città/indirizzo (oppure usa 'Vicino a me')."); return; }
+      if (!strategy) { setStatus("Scrivi la keyword strategy (es: 'in vendita bilocale')."); return; }
+      if (!addressText) { setStatus("Scrivi una città/indirizzo (oppure usa 'Vicino a me')."); return; }
 
-      setStatus("Sto geocodificando l'indirizzo…");
-      let geo;
-      try {
-        geo = await geocodeAddress(addressText);
-      } catch (e) {
-        setStatus(e.message);
-        return;
-      }
+      setStatus("Sto trovando l'indirizzo sulla mappa…");
+      const geo = await geocodeNominatim(addressText);
+      if (!geo) { setStatus("Indirizzo non trovato. Prova con: Città + Via + numero."); return; }
 
-      setPoint(geo.lat, geo.lng, geo.formatted);
+      setPoint(geo.lat, geo.lng, geo.label);
 
-      const q = buildQuery(strategy, geo.formatted);
-      setStatus("Cerco su Google (tramite API)…");
-
-      try {
-        const url = new URL(WORKER_SEARCH_ENDPOINT);
-        url.searchParams.set("q", q);
-
-        const res = await fetch(url.toString());
-        if (!res.ok) throw new Error("Errore ricerca: " + res.status);
-        const data = await res.json();
-
-        renderResults(data);
-        setStatus(`Trovati ${data.items?.length || 0} risultati.`);
-      } catch (e) {
-        setStatus("Errore: " + e.message);
-      }
+      const query = buildQuery(strategy, geo.label);
+      renderLinks(query);
+      setStatus("Fatto ✅ Ho creato i link di ricerca per i portali.");
     }
 
-    function portalTag(link) {
-      try {
-        const host = new URL(link).hostname.replace("www.","");
-        return host;
-      } catch { return ""; }
+    function geoLocate(){
+      setStatus("Sto geolocalizzando…");
+      if (!navigator.geolocation) { setStatus("Geolocalizzazione non supportata."); return; }
+
+      navigator.geolocation.getCurrentPosition(async (pos) => {
+        const lat = pos.coords.latitude;
+        const lng = pos.coords.longitude;
+        setPoint(lat, lng, "Sei qui");
+
+        // Provo a ottenere un indirizzo testuale (reverse) gratis
+        try {
+          const url = new URL("https://nominatim.openstreetmap.org/reverse");
+          url.searchParams.set("format", "json");
+          url.searchParams.set("lat", lat);
+          url.searchParams.set("lon", lng);
+
+          const res = await fetch(url.toString(), { headers: { "Accept": "application/json" } });
+          const data = await res.json();
+          const label = data?.display_name || "";
+          if (label) addressEl.value = label;
+        } catch {}
+
+        setStatus("Posizione rilevata ✅ Ora premi 'Crea ricerche'.");
+      }, (err) => {
+        setStatus("Errore posizione: " + err.message);
+      }, { enableHighAccuracy:true, timeout:15000, maximumAge:0 });
     }
 
-    function renderResults(data) {
-      clearResults();
-      const items = data.items || [];
-      if (!items.length) {
-        resultsEl.innerHTML = "<div style='color:#666;font-size:13px'>Nessun risultato.</div>";
-        return;
-      }
-
-      for (const it of items) {
-        const div = document.createElement("div");
-        div.className = "res";
-        const host = portalTag(it.link);
-        div.innerHTML = `
-          <div><a href="${it.link}" target="_blank" rel="noopener">${it.title}</a>
-          ${host ? `<span class="tag">${host}</span>` : ""}</div>
-          <div style="color:#666;font-size:13px;margin-top:6px">${it.snippet || ""}</div>
-        `;
-        resultsEl.appendChild(div);
-      }
-    }
+    document.getElementById("btnGeo").addEventListener("click", geoLocate);
+    document.getElementById("btnBuild").addEventListener("click", buildSearches);
+    addressEl.addEventListener("keydown", (e) => { if (e.key === "Enter") buildSearches(); });
   </script>
 </body>
 </html>
