--- a/index.html
+++ b/index.html
@@ -1,176 +1,257 @@
-<!doctype html>
+    <!doctype html>
 <html lang="it">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Immobili in zona (gratis)</title>
+  <title>Ricerca immobili (gratis)</title>
 
+  <!-- Leaflet + OpenStreetMap (GRATIS) -->
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
+
   <style>
-    html, body { height:100%; margin:0; font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial; }
-    #top {
-      position: fixed; left: 12px; right: 12px; top: 12px; z-index: 999;
-      background: rgba(255,255,255,.95); border:1px solid #eee; border-radius: 14px;
-      padding: 10px; display: grid; gap: 8px;
+    html, body {
+      height: 100%;
+      margin: 0;
+      font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial;
     }
-    .row { display:flex; gap:8px; flex-wrap:wrap; }
-    input { flex:1; padding:10px 12px; border:1px solid #ddd; border-radius: 12px; }
-    button { padding:10px 12px; border:1px solid #ddd; background:#fff; border-radius: 12px; cursor:pointer; }
-    button.primary { background:#111; color:#fff; border-color:#111; }
-    #status { color:#666; font-size:13px; }
-    #links { display:grid; gap:8px; max-height: 34vh; overflow:auto; padding-top: 6px; }
+
+    #panel {
+      position: fixed;
+      top: 12px;
+      left: 12px;
+      right: 12px;
+      z-index: 1000;
+      background: rgba(255,255,255,0.96);
+      border: 1px solid #eee;
+      border-radius: 14px;
+      padding: 10px;
+      display: grid;
+      gap: 8px;
+    }
+
+    .row {
+      display: flex;
+      gap: 8px;
+      flex-wrap: wrap;
+    }
+
+    input {
+      flex: 1;
+      padding: 10px 12px;
+      border: 1px solid #ddd;
+      border-radius: 12px;
+    }
+
+    button {
+      padding: 10px 12px;
+      border: 1px solid #ddd;
+      background: #fff;
+      border-radius: 12px;
+      cursor: pointer;
+    }
+
+    button.primary {
+      background: #111;
+      color: #fff;
+      border-color: #111;
+    }
+
+    #status {
+      font-size: 13px;
+      color: #666;
+    }
+
+    #links {
+      display: grid;
+      gap: 8px;
+      max-height: 35vh;
+      overflow: auto;
+    }
+
     .portal {
-      border:1px solid #eee; border-radius: 12px; padding:10px;
-      display:flex; justify-content:space-between; align-items:center; gap:10px;
+      border: 1px solid #eee;
+      border-radius: 12px;
+      padding: 10px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      gap: 10px;
     }
-    .portal strong { font-size:14px; }
-    .portal a { font-weight:700; }
-    .tag { font-size: 12px; color:#666; }
-    #map { height:100%; width:100%; }
+
+    .portal small {
+      color: #666;
+      font-size: 12px;
+    }
+
+    #map {
+      height: 100%;
+      width: 100%;
+    }
   </style>
 </head>
+
 <body>
-  <div id="top">
-    <div class="row">
-      <input id="strategy" placeholder="Keyword strategy (es: 'in vendita trilocale')" />
-      <button id="btnGeo">📍 Vicino a me</button>
-    </div>
-    <div class="row">
-      <input id="address" placeholder="Inserisci città/indirizzo (es: Milano, Via Torino 10)" />
-      <button class="primary" id="btnBuild">Crea ricerche</button>
-    </div>
-    <div id="status">Pronto.</div>
-    <div id="links"></div>
+
+<div id="panel">
+  <div class="row">
+    <input id="strategy" placeholder="Keyword (es: in vendita trilocale)" />
+    <button id="geo">📍 Vicino a me</button>
   </div>
 
-  <div id="map"></div>
+  <div class="row">
+    <input id="address" placeholder="Città o indirizzo (senza civico va benissimo)" />
+    <button class="primary" id="build">Crea ricerche</button>
+  </div>
 
-  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
-  <script>
-    const statusEl = document.getElementById("status");
-    const linksEl = document.getElementById("links");
-    const strategyEl = document.getElementById("strategy");
-    const addressEl  = document.getElementById("address");
+  <div id="status">Pronto.</div>
+  <div id="links"></div>
+</div>
 
-    // Portali (gratis): aggiungi/togli domini qui
-    const PORTALS = [
-      { name: "Immobiliare.it", domain: "immobiliare.it" },
-      { name: "Idealista",      domain: "idealista.it" },
-      { name: "Casa.it",        domain: "casa.it" },
-      { name: "Wikicasa",       domain: "wikicasa.it" },
-      { name: "Subito (immobili)", domain: "subito.it" }
-    ];
+<div id="map"></div>
 
-    // Mappa gratis (OpenStreetMap)
-    const map = L.map("map").setView([41.9028, 12.4964], 12); // fallback Roma
-    L.tileLayer("https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png", {
-      attribution: "&copy; OpenStreetMap contributors"
-    }).addTo(map);
+<script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+<script>
+  const statusEl = document.getElementById("status");
+  const linksEl = document.getElementById("links");
+  const strategyEl = document.getElementById("strategy");
+  const addressEl = document.getElementById("address");
 
-    let marker = null;
+  // ✅ Portali: aggiungi/togli domini qui
+  const PORTALS = [
+    { name: "Immobiliare.it", domain: "immobiliare.it" },
+    { name: "Idealista", domain: "idealista.it" },
+    { name: "Casa.it", domain: "casa.it" },
+    { name: "Wikicasa", domain: "wikicasa.it" },
+    { name: "Subito", domain: "subito.it" }
+  ];
 
-    function setStatus(msg){ statusEl.textContent = msg; }
-    function setPoint(lat, lng, label){
-      map.setView([lat, lng], 14);
-      if (marker) map.removeLayer(marker);
-      marker = L.marker([lat, lng]).addTo(map).bindPopup(label || "Punto").openPopup();
+  // ✅ Mappa gratis (OpenStreetMap)
+  const map = L.map("map").setView([41.9028, 12.4964], 12); // fallback Roma
+  L.tileLayer("https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png", {
+    attribution: "© OpenStreetMap"
+  }).addTo(map);
+
+  let marker;
+
+  function setStatus(msg) {
+    statusEl.textContent = msg;
+  }
+
+  function setMarker(lat, lng, text) {
+    if (marker) map.removeLayer(marker);
+    marker = L.marker([lat, lng]).addTo(map).bindPopup(text).openPopup();
+    map.setView([lat, lng], 14);
+  }
+
+  // ✅ Geocoding gratis via Nominatim
+  async function geocode(query) {
+    const url = `https://nominatim.openstreetmap.org/search?format=json&limit=1&q=${encodeURIComponent(query)}`;
+    const r = await fetch(url);
+    const d = await r.json();
+    if (!d.length) return null;
+    return { lat: +d[0].lat, lng: +d[0].lon, label: d[0].display_name };
+  }
+
+  // ✅ Reverse geocoding gratis (lat/lng -> indirizzo)
+  async function reverseGeocode(lat, lng) {
+    const url = `https://nominatim.openstreetmap.org/reverse?format=json&lat=${lat}&lon=${lng}`;
+    const r = await fetch(url);
+    const d = await r.json();
+    return d?.display_name || "";
+  }
+
+  // ✅ PULIZIA: solo indirizzo + città, NO civico, NO CAP
+  function cleanLocation(text) {
+    if (!text) return "";
+
+    // 1) togli CAP (5 numeri)
+    let s = text.replace(/\b\d{5}\b/g, "");
+
+    // 2) togli numeri civici (numeri con eventuale lettera)
+    s = s.replace(/\b\d+[A-Za-z]?\b/g, "");
+
+    // 3) pulizia spazi e virgole
+    s = s.replace(/\s+/g, " ").replace(/\s*,\s*/g, ",").trim();
+
+    // 4) prendi solo le prime 2 parti (di solito: via + città)
+    const parts = s.split(",").map(p => p.trim()).filter(Boolean);
+
+    // Se Nominatim restituisce tipo: "Via Roma, Milano, Lombardia, Italia"
+    // noi vogliamo: "Via Roma Milano"
+    return parts.slice(0, 2).join(" ");
+  }
+
+  function buildGoogleLink(domain, query) {
+    const q = `site:${domain} ${query}`;
+    return `https://www.google.com/search?q=${encodeURIComponent(q)}`;
+  }
+
+  function renderLinks(query) {
+    linksEl.innerHTML = "";
+    PORTALS.forEach(p => {
+      const div = document.createElement("div");
+      div.className = "portal";
+      div.innerHTML = `
+        <div>
+          <strong>${p.name}</strong><br>
+          <small>site:${p.domain}</small>
+        </div>
+        <a href="${buildGoogleLink(p.domain, query)}" target="_blank" rel="noopener">Apri</a>
+      `;
+      linksEl.appendChild(div);
+    });
+  }
+
+  async function buildSearches() {
+    const strategy = strategyEl.value.trim();
+    const address = addressEl.value.trim();
+
+    if (!strategy) { setStatus("Scrivi la keyword (es: in vendita bilocale)."); return; }
+    if (!address) { setStatus("Scrivi città/indirizzo (senza civico va benissimo)."); return; }
+
+    setStatus("Sto cercando l'indirizzo…");
+    const geo = await geocode(address);
+
+    if (!geo) {
+      setStatus("Indirizzo non trovato. Prova con 'Via + Città'.");
+      return;
     }
 
-    async function geocodeNominatim(query){
-      // Geocoding gratis via Nominatim (OSM)
-      const url = new URL("https://nominatim.openstreetmap.org/search");
-      url.searchParams.set("q", query);
-      url.searchParams.set("format", "json");
-      url.searchParams.set("limit", "1");
+    setMarker(geo.lat, geo.lng, geo.label);
 
-      const res = await fetch(url.toString(), { headers: { "Accept": "application/json" } });
-      if (!res.ok) throw new Error("Geocoding non disponibile");
-      const data = await res.json();
-      if (!data.length) return null;
+    // ✅ qui facciamo la pulizia: niente civico, niente CAP
+    const cleanAddress = cleanLocation(geo.label);
 
-      return { lat: Number(data[0].lat), lng: Number(data[0].lon), label: data[0].display_name };
-    }
+    // Query finale: keyword + (via + città)
+    const finalQuery = `${strategy} ${cleanAddress}`.trim();
 
-    function googleUrlFor(domain, query){
-      // Cerca su Google limitando a un portale: site:dominio + query
-      const q = `site:${domain} ${query}`.trim();
-      const u = new URL("https://www.google.com/search");
-      u.searchParams.set("q", q);
-      return u.toString();
-    }
+    renderLinks(finalQuery);
+    setStatus("Link pronti ✅ (senza civico e senza CAP)");
+  }
 
-    function buildQuery(strategy, addressText){
-      // La tua “key strategy” + città/indirizzo
-      return [strategy, addressText].map(s => (s || "").trim()).filter(Boolean).join(" ");
-    }
+  document.getElementById("build").onclick = buildSearches;
 
-    function renderLinks(query){
-      linksEl.innerHTML = "";
-      for (const p of PORTALS) {
-        const link = googleUrlFor(p.domain, query);
-        const div = document.createElement("div");
-        div.className = "portal";
-        div.innerHTML = `
-          <div>
-            <strong>${p.name}</strong>
-            <div class="tag">site:${p.domain}</div>
-          </div>
-          <a href="${link}" target="_blank" rel="noopener">Apri</a>
-        `;
-        linksEl.appendChild(div);
-      }
-    }
+  document.getElementById("geo").onclick = () => {
+    setStatus("Geolocalizzazione…");
+    if (!navigator.geolocation) { setStatus("Geolocalizzazione non supportata."); return; }
 
-    async function buildSearches(){
-      linksEl.innerHTML = "";
-      const strategy = strategyEl.value.trim();
-      const addressText = addressEl.value.trim();
+    navigator.geolocation.getCurrentPosition(async p => {
+      const lat = p.coords.latitude;
+      const lng = p.coords.longitude;
 
-      if (!strategy) { setStatus("Scrivi la keyword strategy (es: 'in vendita bilocale')."); return; }
-      if (!addressText) { setStatus("Scrivi una città/indirizzo (oppure usa 'Vicino a me')."); return; }
+      setMarker(lat, lng, "Sei qui");
 
-      setStatus("Sto trovando l'indirizzo sulla mappa…");
-      const geo = await geocodeNominatim(addressText);
-      if (!geo) { setStatus("Indirizzo non trovato. Prova con: Città + Via + numero."); return; }
+      // riempiamo il campo indirizzo con la via+città trovata (poi verrà ripulita)
+      try {
+        const label = await reverseGeocode(lat, lng);
+        addressEl.value = label || "";
+      } catch {}
 
-      setPoint(geo.lat, geo.lng, geo.label);
+      setStatus("Posizione trovata ✅ Ora premi 'Crea ricerche'.");
+    }, e => setStatus("Errore posizione: " + (e.message || "")),
+    { enableHighAccuracy:true, timeout:15000, maximumAge:0 });
+  };
+</script>
 
-      const query = buildQuery(strategy, geo.label);
-      renderLinks(query);
-      setStatus("Fatto ✅ Ho creato i link di ricerca per i portali.");
-    }
-
-    function geoLocate(){
-      setStatus("Sto geolocalizzando…");
-      if (!navigator.geolocation) { setStatus("Geolocalizzazione non supportata."); return; }
-
-      navigator.geolocation.getCurrentPosition(async (pos) => {
-        const lat = pos.coords.latitude;
-        const lng = pos.coords.longitude;
-        setPoint(lat, lng, "Sei qui");
-
-        // Provo a ottenere un indirizzo testuale (reverse) gratis
-        try {
-          const url = new URL("https://nominatim.openstreetmap.org/reverse");
-          url.searchParams.set("format", "json");
-          url.searchParams.set("lat", lat);
-          url.searchParams.set("lon", lng);
-
-          const res = await fetch(url.toString(), { headers: { "Accept": "application/json" } });
-          const data = await res.json();
-          const label = data?.display_name || "";
-          if (label) addressEl.value = label;
-        } catch {}
-
-        setStatus("Posizione rilevata ✅ Ora premi 'Crea ricerche'.");
-      }, (err) => {
-        setStatus("Errore posizione: " + err.message);
-      }, { enableHighAccuracy:true, timeout:15000, maximumAge:0 });
-    }
-
-    document.getElementById("btnGeo").addEventListener("click", geoLocate);
-    document.getElementById("btnBuild").addEventListener("click", buildSearches);
-    addressEl.addEventListener("keydown", (e) => { if (e.key === "Enter") buildSearches(); });
-  </script>
 </body>
 </html>
